--- a/app/assets/sass/opss/_opss-shared.scss
+++ b/app/assets/sass/opss/_opss-shared.scss
@@ -731,74 +731,32 @@ dl.opss-summary-list-aside {
                 color: $govuk-secondary-text-colour;
             }
         }
-
-        
-
     }
 
-    @include govuk-media-query($from: tablet) {
-        &.opss-summary-list-mixed--image {
-            position: relative; 
-        
-            &  > div:first-child {
-                figcaption {
-                    max-width: 65%; 
-                    @include word-wrap; 
-                }
-
-                dt + dd {
-                    width: 100%;
-                }
-            }
-
-            figcaption span {
-                display: inline-block;
-                font-weight: bold; 
-                margin-right: govuk-spacing(2);
-            }             
-        
-            & > div dd.opss-summary-list-mixed_edit-image {
-                white-space: nowrap; 
-                width: 20%;
-                position: absolute;
-                right: 0;
-                text-align: right;
-                top: govuk-spacing(2); 
-                margin: 0; 
-            }
-        }
-    }
-
-    &.opss-summary-list-mixed--image {
+    &.opss-summary-list-mixed--image > div:first-child dt {
+        vertical-align: bottom;
     
-        & > div:first-child dt + dd {
+        & + dd {
             padding-right: govuk-spacing(0); 
 
             figure {
-                width: 100%; 
-
                 img {
                     max-width: 100%;
                 } 
 
                 a { 
                     display: block; 
-                    margin-top: govuk-spacing(3); 
-                    margin-bottom: - govuk-spacing(2); 
+                    margin-top: - govuk-spacing(5); 
+                    margin-bottom: govuk-spacing(1); 
 
                     img {
                         margin-top: -2px;
                         margin-bottom: -2px; 
                         border: 0;
                     }
-                    
                 }
             }
         }
-
-        .opss-summary-list-mixed_edit-image {
-            margin: govuk-spacing(6) 0 0 0; 
-        }       
     }
 
     .opss-grouping & {
@@ -813,6 +771,12 @@ dl.opss-summary-list-aside {
         .govuk-summary-list__row dd:last-child {
             width: inherit;
         }
+
+        &.opss-summary-list-mixed--narrow-actions > div {/*firefox only: col flow bug */
+            dd[class$="__actions"] {
+                width: auto;
+            } 
+        }        
     }
 }
 
