--- a/app/views/psd-revised-flow/inc_products_pg_content.html
+++ b/app/views/psd-revised-flow/inc_products_pg_content.html
@@ -5,7 +5,7 @@
             Products
         </h1>
 
-        <p class="govuk-body opss-secondary-text govuk-!-margin-bottom-7">These are the product records included in the case.</p>
+        <p class="govuk-body opss-secondary-text govuk-!-margin-bottom-7">These are the product records included in the case. <!--br class="opss-br-desktop">If one or more have been added - this is what the case is about.</p-->
     </div>
     <div class="govuk-grid-column-one-quarter govuk-!-margin-bottom-4">
         <div class="opss-text-align-right">
