--- a/app/views/psd-revised-flow/indexxx.html
+++ b/app/views/psd-revised-flow/indexxx.html
@@ -333,7 +333,13 @@
                     </li>
                 </ul>
             </li>
-            
+            <li>
+                <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/supporting-information.html" target="_blank">Case page - Activity</a> - recycles the current <abbr>HTML</abbr> for the activity list
+                <br><span class="govuk-!-font-size-16">The specific <abbr>HTML</abbr> list is reused and simply placed within the new content area of the new page design/layout. (A new class has been added to the wrapper div of the old list)</span>.
+            </li>
+            <li>
+                We also require mock-ups of the current 'create a product page' (which is the one page asking several question about the product): with key sections removed. Some of these questions will now be part of the new 'creating a case' for TSOs (and for OPSS they will be able to add this data via the new Cases page). This tech debt brings the current create a product page inline with the cases pages designs.
+            </li>
         </ol>
 
         <h3 class="govuk-heading-s govuk-!-font-weight-regular margin-left"><abbr>OPSS</abbr> pages - updating</h3>
