--- a/app/views/psd-revised-flow/supporting-information.html
+++ b/app/views/psd-revised-flow/supporting-information.html
@@ -370,7 +370,7 @@
                                 Title
                             </dt>
                             <dd class="govuk-summary-list__value">
-                                <a href="/cases/2202-0005/emails/188" class="govuk-link govuk-link--no-visited-state">Just a general rant really.</a>
+                                <a href="/cases/2202-0005/emails/188" class="govuk-link govuk-link--no-visited-state">Details about the distributor</a>
                             </dd>
                         </div>
                         <div class="govuk-summary-list__row">
@@ -408,7 +408,7 @@
                                 Title
                             </dt>
                             <dd class="govuk-summary-list__value">
-                                <a href="/cases/2202-0005/phone-calls/189"class="govuk-link govuk-link--no-visited-state">Medium risk: Sunshine washing up liquid</a>
+                                <a href="/cases/2202-0005/phone-calls/189"class="govuk-link govuk-link--no-visited-state">Update on owner location</a>
                             </dd>
                         </div>
                         <div class="govuk-summary-list__row">
